--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -32,11 +32,13 @@
             android:id="@+id/action_sleepTrackerFragment_to_sleepQualityFragment"
             app:destination="@id/sleep_quality_fragment"
             app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@android:anim/slide_out_right"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@android:anim/slide_out_right" />
+            app:popEnterAnim="@anim/slide_in_right" />
+        <action
+            android:id="@+id/action_sleep_tracker_fragment_to_sleepDetailFragment"
+            app:destination="@id/sleep_detail_fragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:popEnterAnim="@anim/slide_in_right" />
     </fragment>
-
     <fragment
         android:id="@+id/sleep_quality_fragment"
         android:name="com.example.android.trackmysleepquality.sleepquality.SleepQualityFragment"
@@ -48,13 +50,23 @@
         <action
             android:id="@+id/action_sleepQualityFragment_to_sleepTrackerFragment"
             app:destination="@id/sleep_tracker_fragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@android:anim/slide_out_right"
             app:launchSingleTop="false"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@android:anim/slide_out_right"
             app:popUpTo="@+id/sleep_tracker_fragment"
             app:popUpToInclusive="true" />
     </fragment>
-
+    <fragment
+        android:id="@+id/sleep_detail_fragment"
+        android:name="com.example.android.trackmysleepquality.sleepdetail.SleepDetailFragment"
+        android:label="fragment_sleep_detail"
+        tools:layout="@layout/fragment_sleep_detail">
+        <argument
+            android:name="sleepNight"
+            app:argType="com.example.android.trackmysleepquality.database.SleepNight" />
+        <action
+            android:id="@+id/action_sleepDetailFragment_to_sleep_tracker_fragment"
+            app:destination="@id/sleep_tracker_fragment"
+            app:launchSingleTop="false"
+            app:popUpTo="@+id/sleep_tracker_fragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
